syntax = "proto3";

option csharp_namespace = "NotificationService.Grpc";

package user;

service UserService {
    rpc GetUserById (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
    string userId = 1;
}

message UserResponse {
    string userId = 1;
    string username = 2;
    string name = 3;
    string gender = 4;
    string bio = 5;
    int32 age = 6;
    repeated string skills = 7;
    repeated string topicsOfInterest = 8;
    string imageUrl = 9;
    repeated string followers = 10;
    repeated string following = 11;
}
